--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The networking guts of Hyperswarm",
   "main": "index.js",
   "scripts": {
-    "test": "standard && tape test/*.js"
+    "test": "tap test/*.js && standard --fix",
+    "cov": "tap --100 test/*.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,9 @@
     "guts"
   ],
   "author": "Mathias Buus (@mafintosh)",
+  "contributors": [
+    "David Mark Clements (@davidmarkclem)"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/hyperswarm/guts/issues"
@@ -28,7 +32,8 @@
     "utp-native": "^2.1.3"
   },
   "devDependencies": {
+    "events.once": "^2.0.2",
     "standard": "^12.0.1",
-    "tape": "^4.9.2"
+    "tap": "^12.6.3"
   }
 }
