--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
   "name": "@hyperswarm/guts",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The networking guts of Hyperswarm",
   "main": "index.js",
-  "scripts": {
-    "test": "tap -T test/*.test.js && standard --fix",
-    "cov": "tap -T --100 test/*.test.js",
-    "ci": "standard && npm run cov"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hyperswarm/guts.git"
@@ -28,15 +24,6 @@
   },
   "homepage": "https://github.com/hyperswarm/guts#readme",
   "dependencies": {
-    "@hyperswarm/discovery": "^1.2.0",
-    "nanoresource": "^1.0.0",
-    "utp-native": "^2.1.3"
-  },
-  "devDependencies": {
-    "@hyperswarm/dht": "0.0.1",
-    "events.once": "^2.0.2",
-    "get-port": "^5.0.0",
-    "standard": "^12.0.1",
-    "tap": "^12.6.6"
+    "@hyperswarm/network": "1.0.0"
   }
 }
