--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@hyperswarm/dht": "0.0.1",
+    "@types/node": "^13.11.0",
     "events.once": "^2.0.2",
     "get-port": "^5.0.0",
     "standard": "^12.0.1",
