--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "utp-native": "^2.2.1"
   },
   "devDependencies": {
-    "@hyperswarm/dht": "0.0.1",
+    "@hyperswarm/dht": "^4.0.0",
     "events.once": "^2.0.2",
     "get-port": "^5.0.0",
     "standard": "^12.0.1",
